# sigma-nova-assignment

./: .gitignore  README.md  pyproject.toml  ruff.toml
docs/: assingment.md  design_doc.md  feedback_on_assignment.md
notebooks/: benchmark_eda.ipynb  eda.ipynb  event_window_adaptation.ipynb  inspect_models.ipynb
scripts/: download_bci_competition_iv_2a.py
src/eeg_benchmark/: __init__.py  adapters.py  cli.py  datasets.py  models.py  pipeline.py  probe.py  results.py  types.py
src/eeg_benchmark/datasets/: __init__.py  base.py  bnci2014_001.py
src/eeg_benchmark/models/: __init__.py  base.py  cbramod.py  labram.py
tests/: test_adapters.py  test_datasets.py  test_models.py  test_probe.py  test_results.py
