[project]
name = "sigma-nova-assignment"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "~=3.13"
dependencies = [
    "braindecode[hub]>=1.4,<1.6",
    "mne>=1.9.0",
    "pandas>=3.0.3",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "matplotlib>=3.10.3",
    "ipython>=9.4.0",
    "ipykernel>=7.3.0",
]
